[package]
name = "delenix"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
image = "0.24"
rand = "0.8"
chrono = "0.4"
regex = "1.9"
lazy_static = "1.4"
clap = { version = "4.3.11", features = ["derive"] }
structopt = "0.3.26"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
atty = "0.2"
home = "0.5.5"

gtk = "0.17"
gdk = "0.17"
gdk-pixbuf = "0.17"

tesseract = { version = "0.15.0", optional = true }

[features]
tesseract = ["dep:tesseract"]

[target.x86_64-pc-windows-gnu.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "handleapi", "winbase"] }
named_pipe = "0.4"
tokio-named-pipes = "0.1"

[target.x86_64-unknown-linux-gnu.dependencies]
x11rb = "0.12"

[[bin]]
name = "delenix"
path = "src/main.rs"

[[bin]]
name = "delenix-gui"
path = "src/gui/main.rs"

[lib]
name = "delenix_lib"
path = "src/lib/lib.rs"